--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Sales Inquery || [Your Domain]</title>
+        <title>Sales Inquery || iPriyanka.com]</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -20,7 +20,7 @@
                     <div class="col-sm-6 bg-faded text-center col-fixed">
                         <div class="vMiddle">
                           <h1 class="pt-4 h2">
-                              <span class="text-green">[Your Domain].com</span>
+                              <span class="text-green">iPriyanka.com.com</span>
                               <small>available for sale</small>
                           </h1>
                           <p class="mt-4">
@@ -28,17 +28,17 @@
                           </p>
                           <div class="pt-5">
                               <label for="name">
-                              <a class="btn text-white bg-green btn-lg">Buy now for $4999</a>
+                              <a class="btn text-white bg-green btn-lg">Buy now for $99</a>
                               </label>
                           </div>
                           <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
                               <div class="col-sm-4">
                                   <p><em class="ion-ios-telephone-outline icon-md"></em></p>
-                                  <p class="lead"><a href="tel:+[Your Phone]">+[Your Phone]</a></p>
+                                  <p class="lead"><a href="tel:+[Your Phone]">+00000000</a></p>
                               </div>
                               <div class="col-sm-4">
                                   <p><em class="ion-ios-chatbubble-outline icon-md"></em></p>
-                                  <p class="lead"><a href="mailto:email@[Your Domain].com">email@[Your Domain].com</a></p>
+                                  <p class="lead"><a href="mailto:email@email.com">email@[Your Domain].com</a></p>
                               </div>
                           </div>
                       </div>
@@ -48,7 +48,7 @@
                             <div class="container">
                                 <div class="row height-100">
                                     <div class="col-sm-10 offset-sm-1 mt-2">
-                                        <form id="main-offer-form" action="contact.php" method="post">
+                                        <form id="main-offer-form" action="mail:lymcode@gmail.com" method="post">
                                             <h2 class="text-primary">Interested in this domain?</h2>
                                             <hr/>
                                             <div class="form-group">
