--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                               <a class="btn text-white bg-green btn-lg">Buy now for $99</a>
                               </label>
                           </div>
-                          <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
+<!--                           <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
                               <div class="col-sm-4">
                                   <p><em class="ion-ios-telephone-outline icon-md"></em></p>
                                   <p class="lead"><a href="tel:+[Your Phone]">+00000000</a></p>
@@ -40,7 +40,7 @@
                                   <p><em class="ion-ios-chatbubble-outline icon-md"></em></p>
                                   <p class="lead"><a href="mailto:email@email.com">email@[Your Domain].com</a></p>
                               </div>
-                          </div>
+                          </div> -->
                       </div>
                     </div>
                     <div class="col-sm-6 offset-sm-6">
@@ -48,7 +48,7 @@
                             <div class="container">
                                 <div class="row height-100">
                                     <div class="col-sm-10 offset-sm-1 mt-2">
-                                        <form id="main-offer-form" action="mail:lymcode@gmail.com" method="post">
+                                        <form id="main-offer-form" action="https://formspree.io/f/xwkabpbb" method="POST">
                                             <h2 class="text-primary">Interested in this domain?</h2>
                                             <hr/>
                                             <div class="form-group">
