--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                                             <div class="form-group">
                                                 <textarea name="comments" class="form-control" placeholder="Message (optional)"></textarea>
                                             </div>
-<!--                                             <div class="form-group">
-                                              <div id="recaptcha" class="g-recaptcha" data-sitekey="6Lc_sf8aAAAAAFk3KIcYvqcIoo1HeCOZu4faK3DA" data-callback="onSubmit" data-size="invisible"></div>
-                                            </div> -->
+                                            <div class="form-group">
+                                              <div id="recaptcha" class="g-recaptcha" data-sitekey="6LdedCQbAAAAAMRO4wcogpXDpsAVV4m6kGffzB77" data-callback="onSubmit" data-size="invisible"></div>
+                                            </div>
 
                                             <button type="submit" class="btn text-white btn-lg bg-primary btn-block">Make an offer</button>
                                         </form>
