--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="col-sm-6 bg-faded text-center col-fixed">
                         <div class="vMiddle">
                           <h1 class="pt-4 h2">
-                              <span class="text-green">iPriyanka.com.com</span>
+                              <span class="text-green">iPriyanka.com</span>
                               <small>available for sale</small>
                           </h1>
                           <p class="mt-4">
