--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                           </p>
                           <div class="pt-5">
                               <label for="name">
-                              <a class="btn text-white bg-green btn-lg">Buy now for $99</a>
+                              <a class="btn text-white bg-green btn-lg">Buy now</a>
                               </label>
                           </div>
 <!--                           <div class="row d-md-flex text-center justify-content-center text-primary action-icons">
